# hass-eink

./: .gitignore  README.md  conftest.py  hacs.json  pyproject.toml  requirements-test.txt  requirements.txt
custom_components/eink/: __init__.py  config_flow.py  const.py  coordinator.py  dither.py  http.py  manifest.json  options_view.py  panel.py  renderer.py  select.py  services.yaml  strings.json
custom_components/eink/icons/: generate.sh
custom_components/eink/icons/erikflowers/: README.md  generate.sh
custom_components/eink/icons/weather-icons/: README.md
custom_components/eink/translations/: de.json  en.json
custom_components/eink/widgets/: calendar.py  image.py  test.py  weather.py
custom_components/eink/www/: eink-panel.js
esphome/: README.md  hass-eink-client.yaml  sample-config.yaml  secrets.yaml.example  waveshare-s3-photopainter.yaml
esphome/components/epaper_dither/: __init__.py  epaper_dither.h
scripts/: reload.sh  restart.sh
tests/: conftest.py  test_config_flow.py  test_http.py  test_renderer.py  test_service.py  test_snapshot_calendar.py  test_snapshot_icons_cat.py  test_snapshot_image.py  test_snapshot_layout.py  test_snapshot_test_widget.py  test_snapshot_weather.py
tests/fixtures/: README.md
