[project]
name = "hass-eink"
version = "0.1.0"
description = "Home Assistant E-Ink Display Integration"
requires-python = ">=3.11"
dependencies = [
    "hitherdither",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-homeassistant-custom-component",
    "pytest-asyncio",
    "pycares<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["custom_components/eink"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
hitherdither = { git = "https://github.com/hbldh/hitherdither" }
